New supplychain library version.