@@ -80,7 +80,7 @@ public class DelayProductionService extends ProductionService
         Duration ptime = this.productionTime.draw();
         if (!this.fixedTime)
         {
-            ptime = ptime.multiplyBy(productionOrder.getAmount());
+            ptime = ptime.times(productionOrder.getAmount());
         }
         Time startTime = productionOrder.getDateReady().minus(ptime);
         startTime = Time.max(this.owner.getSimulatorTime(), startTime);
@@ -95,7 +95,7 @@ public class DelayProductionService extends ProductionService
             Product raw = bomIter.next();
             double amount = bom.get(raw).doubleValue();
             amount *= productionOrder.getAmount();
-            availableMaterials.put(raw, new Double(amount));
+            availableMaterials.put(raw,Double.valueOf(amount));
         }
         // don't do anyting before production has to start
         Serializable[] args = new Serializable[] { productionOrder, ptime, availableMaterials };
@@ -118,7 +118,7 @@ public class DelayProductionService extends ProductionService
         Duration ptime = this.productionTime.draw();
         if (!this.fixedTime)
         {
-            ptime = ptime.multiplyBy(productionOrder.getAmount());
+            ptime = ptime.times(productionOrder.getAmount());
         }
 
         Product _product = productionOrder.getProduct();
@@ -132,7 +132,7 @@ public class DelayProductionService extends ProductionService
             Product raw = bomIter.next();
             double amount = bom.get(raw).doubleValue();
             amount *= productionOrder.getAmount();
-            availableMaterials.put(raw, new Double(amount));
+            availableMaterials.put(raw,Double.valueOf(amount));
         }
 
         boolean enoughOnStock = pickRawMaterials(productionOrder, availableMaterials, false);
